# corti-canal

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .templatesyncignore  Makefile  README.md  pyproject.toml  ruff.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: dependabot_automation.yml  deploy_pages.yml  lint.yml  publish.yml  publish_test.yml  release.yml  template_sync.yml  test.yaml  tests_and_coverage.yml
example/: README.md  example_data.csv  example_keywords.txt  example_report.html
src/corti_canal/: __init__.py
src/corti_canal/cli/: main.py
tests/: test_cli.py  test_default.py  test_init.py
